--- a/Sinatra/caesar_cipher_reloaded/public/index.css
+++ b/Sinatra/caesar_cipher_reloaded/public/index.css
@@ -1,6 +1,3 @@
-@import "http://webfonts.ru/import/adventpro.css";
-@import "http://webfonts.ru/import/engine.css";
-
 .request, .result{
     padding-bottom: 20px;
     width: 100%;
@@ -50,15 +47,11 @@ input:last-of-type:hover{ background-color: rgb(44, 72, 130);}
 
 input[name="shift"]{
     box-shadow: none;
-    width: 65px;
+    width: 64px;
     color: #494953;
     outline-color: #494953;
 }
 
 p{  margin-bottom: 3px; }
 
-input, h1{ font-family: 'Engine'; }
-
-h1{ color: #e74c3c; }
-
-input, p{ font-family: 'Advent Pro'; }
+h1{ color: #e74c3c; text-align: center; }
