--- a/sample_app/app/views/layouts/application.html.erb
+++ b/sample_app/app/views/layouts/application.html.erb
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html>
 
-<head>
+  <head>
     <title>
-        <%= full_title(yield(:title)) %>
+      <%= full_title(yield(:title)) %>
     </title>
     <%= render 'layouts/rails_default' %>
     <%= render 'layouts/shim' %>
-</head>
+  </head>
 
-<body>
+  <body>
     <%= render 'layouts/header' %>
     <div class="container">
-        <%= yield %>
-        <%= render 'layouts/footer' %>
+      <% flash.each do |message_type, message| %>
+        <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
+      <% end %>
+
+      <%= yield %>
+      <%= render 'layouts/footer' %>
+      <%= debug(params) if Rails.env.development? %>
     </div>
-</body>
+  </body>
 
 </html>
